--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-apllication.properties
+src/main/resources/application.properties
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
