--- a/build.gradle
+++ b/build.gradle
@@ -25,14 +25,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.auth0:java-jwt:3.19.2'
+    //implementation 'com.auth0:java-jwt:3.19.2'
 // json
+    implementation 'org.springframework.security:spring-security-test'
     implementation 'org.json:json:20231013'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     //rome
     implementation 'com.rometools:rome:1.18.0'
 
