--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    //positive 어노테이션
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     //jwt
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     //rome
